style.css
* {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
    margin: 0;
}

.top-bar {
    overflow: hidden;
    background-image: linear-gradient(to right, #000000, #2c0c21);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.full-width {
    padding-left: 20px;
    padding-right: 20px;
    max-width: 840px;
    min-width: 340px;
}

.logo-name {
    margin: auto;
    display: flex;
    align-items: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

.logo {
    max-width: 80px;
}

.name {
    font-family: "Audiowide", Verdana, Geneva, Tahoma, sans-serif;
    font-size: 30px;
    margin-left: 20px;
    color: white;
}

/* Special handling for bigger screens */
@media only screen and (min-width: 800px) {
    .logo-name {
        padding-top: 40px;
        padding-bottom: 40px;
    }

    .logo {
        max-width: 120px;
    }

    .name {
        font-size: 40px;
        margin-left: 20px;
    }
}

.content {
    padding-top: 20px;
    margin: auto;
}

.card {
    display: flex;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 5px;

    text-decoration: none;
    outline-color: transparent;
    color: #000000;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.card-img {
    flex: 1;
    background-color: rgb(51, 11, 41);
    width: 50%;
    max-height: 250px;
    border-radius: 5px 0px 0px 5px;
}

.container {
    flex: 1;
    padding: 2px 16px;
    display: flex;
    flex-direction: column;
}

.description {
    margin-bottom: auto;

}

.start {
    text-align: right;
    text-decoration: underline;
}

